<resources>
    <string name="app_name">Mantiqiy Savollar</string>
    <string name="boshlash">Boshlash</string>
    <string name="dastur_haqida">Dastur haqida</string>
    <string name="chiqish">Chiqish</string>
    <string name="orqaga">Orqaga</string>
    <string name="keyingisi">KEYINGISI</string>
    <string name="kategoriya">Tanlang</string>
    <string name="about">DASTUR HAQIDA</string>
    <string name="about_text">
        GITA dasturchilar akademiyasi har doim o\'zining falsafasiga asoslanib
        faoliyat yuritgan va bu Zamon talabiga mos bo\'lgan IT kadrlarining sonini
        yildan yilga ortib borishiga salmoqli hissa qo\'shib kelmoqda. Bu akademiya hech qachon
        ko\'nikmasi shakllanmagan, hali maqsadning bir uchini biror yerga bog\'lamasdan boshi og\'ishib
        kelib qolgan shaxslarni [o\'quvchi, talaba, ishsiz, xodim yoki keksa kishini] qo\'sh-qo\'llab kursiga o\'tkazgan
        zahoti darslarni o\'tishni boshlab yubormagan. Chunki dasturlash so\'zi qanchalik zalvorli va tilla suvga yugirtirilgan
        qadah kabi moliyaviy to\'kinlik tushunchasini bermasin, bu sohani o\'rganishda oltin izlab son-sanoqsiz yo\'q
        bo\'lib ketganlar bor. Dasturlash qiyin va chin ma\'noda murakkab soha [doimiy izlanish va sabr-toqat],
        bunda matematika, mantiq, qat\'iyat, iroda muhim ro\'l o\'yadi va GITA akademiyasi aynan mana shu hislatlarni
        dastlab tekshiradi, suhbat o\'tkazadi, o\'quv kursi davomida qiyinchiliklar bilan sinaydi,
        qo\'llab-quvatlaydi va shu asnoda og\'ir tosh bosadigan achchiq so\'zlar bilan shaxsiyatni mustahkamlaydi,
        har bir yangi o\'rgatilgan qismda voqelikning asosini tushintirishga harakat qiladi.
        Shu sababdan ham GITA akademiyasida o\'qish oson kechmaydi. Chunki bu akademiya sizga vaqt emas, kafolatlangan
        kelajakni taqdim etishga tirishadi! \n\nQuyidagi o\'rinda shuni aytish mumkin: ushbu dastur GITA akademiyasining
        o\'quvchisi Olmos JT tomonidan asosiy kursning 7-darsiga kelib yaratilgan. Bunda siz o\'zingizning
        mantiqiy tushunchalaringizni oshirishingiz yoki shunchaki tekshirib ko\'rishingiz mumkin!
    </string>
    <string name="diqqat_savol">DIQQAT SAVOL!</string>
    <string name="questions_1">
        Aziz har kuni ertalab mahallasidagi mijozlarga 37 dona gazeta yetkazib beradi.
        Buning uchun u 50 daqiqa vaqtini sarflaydi. Agar Aziz kasal bo\'lib qolsa yoki boshqa rejalari bo\'lsa,
        uning o\'sha ko\'chada yashovchi do\'sti Bahrom Azizning o\'rniga gazetalarni tarqatib beradi.
        \n\nBerilgan ma\'lumotlarga ko\'ra ROST bo\'lgan gapni toping.
    </string>
    <string name="variant_1_a">Aziz va Bahrom bir mahallada istiqomad qilishadi.</string>
    <string name="variant_1_b">Bahrom gazetalarni yetkazib berish uchun 50 daqiqadan ko\'p vaqt ketkazadi.</string>
    <string name="variant_1_c">Aziz gazetalarni yetkazib berishni boshlaganda qorong\'u tushadi.</string>
    <string name="variant_1_d">Bahrom o\'zining gazeta tarqatadigan ishi bo\'lishini istaydi.</string>
    <string name="answer_1">Aziz va Bahrom bir mahallada istiqomad qilishadi.</string>
    <string name="questions_2">
        Yeva - Tinch okeanining shimoli-g\'arbiy qismida o\'sadigan doimiy yashil daraxt.
        Yeva go\'shtli, zaharli mevaga ega bo\'lib yaqinda qobig\'ida topilgan taksol moddasi
        saratonga qarshi yangi istiqbolli dori ekanligi aniqlandi.
        \n\nBerilgan ma\'lumotlarga ko\'ra ROST bo\'lgan gapni toping.
    </string>
    <string name="variant_2_a">Taksol sog\'lom odamlar tomonidan qabul qilinganda zaharli hisoblanadi.</string>
    <string name="variant_2_b">Taksol odamlarni turli kasalliklardan davolagan.</string>
    <string name="variant_2_c">Odamlar Tinch okeanining Yeva mevasini iste\'mol qilmasliklari kerak.</string>
    <string name="variant_2_d">Yeva taksol topilgunga qadar qadrsiz bo\'lgan.</string>
    <string name="answer_2">Odamlar Tinch okeanining Yeva mevasini iste\'mol qilmasliklari kerak.</string>
    <string name="questions_3">
        Anora 12 yoshda. U uch yildan buyon ota-onasidan unga it sotib olib berishlarini iltimos qiladi.
        Uning ota-onasi itning kvartirada baxtli bo\'lmasligiga ishonishlarini aytishdi, biroq Anoraga
        qush boqishga ruhsat berishlarini bildirib o\'tishdi.
        Anora haligacha qanday turdagi qushi bo\'lishini istashini bilmaydi.
        \n\nBerilgan ma\'lumotlarga ko\'ra ROST bo\'lgan gapni toping.
    </string>
    <string name="variant_3_a">Anoraning ota-onasi itlardan ko\'ra qushlarni ko\'proq yoqtirishadi.</string>
    <string name="variant_3_b">Anora qushlarni yoqtirmaydi.</string>
    <string name="variant_3_c">Anora ota-onasi bilan birga kvartirada istiqomad qilishadi.</string>
    <string name="variant_3_d">Anoraning ota-onasi boshqa yerga ko\'chishni istashadi.</string>
    <string name="answer_3">Anora ota-onasi bilan birga kvartirada istiqomad qilishadi.</string>
    <string name="questions_4">
        Temurning ishiga qatnovi uni hech qachon bezovta qilmagan chunki poyezdda har doim bo\'sh
        o\'rindiqlar bo\'lardi va u yo\'lning 40 daqiqasini gazeta o\'qishga yoki qog\'oz ishlarini
        bajarish bilan bemalol o\'tkaza olardi. Ammo, poyezdlar javali o\'zgargandan beri poyezd
        nihoyatda gavjum va uning bekatida eshiklar ochilganda, bo\'sh o\'rindiqlar topilmaydi.
        \n\nBerilgan ma\'lumotlarga ko\'ra ROST bo\'lgan gapni toping.
    </string>
    <string name="variant_4_a">Temur ishga avtobusda ketsa yaxshi bo\'lardi.</string>
    <string name="variant_4_b">Poyezdlar jadvali o\'zgargani uchun Temurning qatnovi unchalik qulay emas.</string>
    <string name="variant_4_c">Ko\'pchilik yo\'lovchilar yangi poyezdlar jadvalidan shikoyat qiladilar.</string>
    <string name="variant_4_d">Temur uyiga yaqinroq yerdan ish qidiradiganga o\'xshaydi.</string>
    <string name="answer_4">Poyezdlar jadvali o\'zgargani uchun Temurning qatnovi unchalik qulay emas.</string>
    <string name="questions_5">
        Dovul haqidagi xabarni eshitishib, Laylo va Aziza dam olish rejalarni
        o\'zgartirishga qaror qilishdi. Orolning plyaj kurortiga sayohat qilishning
        o\'rniga ular tog\'lardagi yangi ajoyib kurortdan xona buyurtma qilishdi. Ularning rejalari biroz
        qimmatroq edi, lekin ular kurort haqida ajoyib narsalarni eshitishgan va shu qadar qisqa fursatda foydalanish
        mumkin bo\'lganligidan ko\'ngli to\'lgan edi.
        \n\nBerilgan ma\'lumotlarga ko\'ra ROST bo\'lgan gapni toping.
    </string>
    <string name="variant_5_a">Aziza va Laylo har yili plyajda dam olishadi.</string>
    <string name="variant_5_b">Kurortning narxi oshib ketgan.</string>
    <string name="variant_5_c">Odatda kurortga kamida olti oy oldin buyurtma qilish kerak.</string>
    <string name="variant_5_d">Aziza va Laylo bo\'ron tufayli dam olish rejalarini o\'zgartirishga qaror qilishdi.</string>
    <string name="answer_5">Aziza va Laylo bo\'ron tufayli dam olish rejalarini o\'zgartirishga qaror qilishdi.</string>
    <string name="questions_6">
        Sentyabr oyida 10 ta yangi teleko\'rsatuv paydo bo\'ldi.
        Ko\'rsatuvlarning beshtasi sitkomlar, uchtasi bir soatlik dramalar va ikkitasi
        yangiliklar-jurnal shoulari edi. Yanvar oyiga kelib, ushbu yangi shoularning faqat yettitasi
        hali ham efirda edi. Qolgan shoularning beshtasi sitkomlardir.
        \n\nBerilgan ma\'lumotlarga ko\'ra ROST bo\'lgan gapni toping.
    </string>
    <string name="variant_6_a">Yangilik-journal ko\'rsatuvlaridan faqat bittasi efirda qoldi.</string>
    <string name="variant_6_b">Bir soatlik dramalardan faqat bittasi efirda qoldi.</string>
    <string name="variant_6_c">Bekor qilingan shoularning kamida bittasi bir soatlik drama edi.</string>
    <string name="variant_6_d">Televizion tomoshabinlar bir soatlik dramalardan ko\'ra sitkomlarni afzal ko\'radilar.</string>
    <string name="answer_6">Bekor qilingan shoularning kamida bittasi bir soatlik drama edi.</string>
    <string name="questions_7">
        Dam olish kunlarida Sardor ota ko\'p vaqtlarda sabzavot va gul bog\'larida ishlaydi.
        Ularning ayollari bo\'sh vaqtini o\'qish va klassik musiqa tinglash bilan o\'tkazadi.
        Ularning ikkisi ham ovqat pishirishni yaxshi ko\'radilar.
        \n\nBerilgan ma\'lumotlarga ko\'ra ROST bo\'lgan gapni toping.
    </string>
    <string name="variant_7_a">Sardor ota sabzavot ekish va yetishtirishni yoqtiradi.</string>
    <string name="variant_7_b">Sardor ota klassik musiqani yoqtirmaydi.</string>
    <string name="variant_7_c">Sardor otaning ayollari Sardor ota yetishtirga sabzavotlarni pishiradi.</string>
    <string name="variant_7_d">Sardor otaning ayollari o\'n to\'qqizinchi asr romanlarini o\'qishni yaxshi ko\'radi.</string>
    <string name="answer_7">Sardor ota sabzavot ekish va yetishtirishni yoqtiradi.</string>
    <string name="questions_8">
        Jasur amakivachchasi Jamiladan katta. Jamilaning akasi Bobur Jasurdan katta.
        Jamila va Bobur qachonki Jasurlarnikiga tashri buyurishganda, uchchalasi birgalikda Monopoliya o\'ynashni yoqtirishadi.
        Jamila Monopoliya o\'ynaganda Jasurdan ko\'ra ko\'proq yutadi.
        \n\nBerilgan ma\'lumotlarga ko\'ra ROST bo\'lgan gapni toping.
    </string>
    <string name="variant_8_a">Jamila va Jasur Monopoliya o\'ynashganda, Bobur tez-tez yutqazadi.</string>
    <string name="variant_8_b">Jasur eng yoshi kattasi.</string>
    <string name="variant_8_c">Jasur Monopoliyada yutqazishni yomon ko\'radi.</string>
    <string name="variant_8_d">Jamila eng kichigi.</string>
    <string name="answer_8">Jamila eng kichigi.</string>
    <string name="questions_9">
        Sevara sharqiy sohildagi eng katta shaharda o\'qiydi.
        Uning kichik amakivachchasi Mohir esa O\'rta G\'arbda 1000 dan kam aholisi bo\'lgan kichik shaharda ishlaydi.
        Mohir so\'ngi besh yil ichida Sevarani ko\'rishga bir necha bor borgan. Xuddi shu vaqt ichida Sevara Mohirni ko\'rishga
        bir marta borgan.
        \n\nBerilgan ma\'lumotlarga ko\'ra ROST bo\'lgan gapni toping.
    </string>
    <string name="variant_9_a">Mohir Sevara uchun Sevaradan ko\'ra ko\'proq qayg\'uradi.</string>
    <string name="variant_9_b">Sevaraning fikricha kichik shaharlar zerikarli.</string>
    <string name="variant_9_c">Sevara Mohirdan kattaroq.</string>
    <string name="variant_9_d">Mohir sharqiy qirg\'oqqa ko\'chib o\'tmoqchi.</string>
    <string name="answer_9">Sevara Mohirdan kattaroq.</string>
    <string name="questions_10">
        E\'tibor bering: 21, 9, 21, 11, 21, 13, 21, … Qaysi raqam kelishi kerak?
    </string>
    <string name="variant_10_a">14</string>
    <string name="variant_10_b">15</string>
    <string name="variant_10_c">21</string>
    <string name="variant_10_d">23</string>
    <string name="answer_10">15</string>
    <string name="questions_11">
        E\'tibor bering: 8, 22, 8, 28, 8, … Qaysi raqam kelishi kerak?
    </string>
    <string name="variant_11_a">9</string>
    <string name="variant_11_b">29</string>
    <string name="variant_11_c">32</string>
    <string name="variant_11_d">34</string>
    <string name="answer_11">34</string>
    <string name="questions_12">
        E\'tibor bering: 31, 29, 24, 22, 17 … Qaysi raqam kelishi kerak?
    </string>
    <string name="variant_12_a">15</string>
    <string name="variant_12_b">14</string>
    <string name="variant_12_c">13</string>
    <string name="variant_12_d">12</string>
    <string name="answer_12">15</string>
    <string name="questions_13">
        E\'tibor bering: 80, 10, 70, 15, 60, … Qaysi raqam kelishi kerak?
    </string>
    <string name="variant_13_a">20</string>
    <string name="variant_13_b">25</string>
    <string name="variant_13_c">30</string>
    <string name="variant_13_d">50</string>
    <string name="answer_13">20</string>
    <string name="questions_14">
        E\'tibor bering: 2, 6, 18, 54, … Qaysi raqam kelishi kerak?
    </string>
</resources>