<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/dark_blue"
    android:orientation="vertical">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/logo_top"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:layout_marginTop="32dp"
        android:layout_marginBottom="32dp">

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:src="@drawable/gita_logo"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            android:textColor="@color/white"
            android:textAlignment="center"
            android:textAllCaps="true"
            android:textSize="16sp"
            android:paddingTop="4dp"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dastur_haqida"
        android:textColor="@color/white"
        android:textAlignment="center"
        android:textSize="28sp"
        android:fontFamily="@font/yantramanav_bold"
        android:layout_marginBottom="8dp"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="4">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp"
            android:text="@string/about_text"
            android:textColor="@color/white"
            android:fontFamily="@font/yantramanav_regular"
            android:justificationMode="inter_word"/>

    </ScrollView>

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:gravity="center">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_back"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/button_home"
            android:text="@string/orqaga"/>

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>